Bug 161233 - FILEOPEN DOCX Through wrapped image looks cropped
Summary: FILEOPEN DOCX Through wrapped image looks cropped
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0 target:25.8.0 target:25...
Keywords:
: 95969 (view as bug list)
Depends on:
Blocks: DOCX-Images
  Show dependency treegraph
 
Reported: 2024-05-23 11:46 UTC by Gabor Kelemen (Collabora)
Modified: 2026-02-08 16:27 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file with through wrapped image (16.39 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-05-23 11:46 UTC, Gabor Kelemen (Collabora)
Details
The example file in Word 2016 and Writer master (113.29 KB, image/png)
2024-05-23 11:47 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-05-23 11:46:38 UTC
Created attachment 194303 [details]
Example file with through wrapped image

Attached example file contains an image which is wrapped as through.

In Writer the right side of it looks cropped, but manually turning off the Contour option seems to fix this appearance.

1. Open attached file
-> the right side of the heart shape looks vertically cropped off

Version: 24.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 1b45ca1aa7d7cb8e7adcc07f8c60e26a413eca8c
CPU threads: 14; OS: Windows 10 X86_64 (10.0 build 19045); UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: default

and back to 3.5, but not yet in 3.3
Comment 1 Gabor Kelemen (Collabora) 2024-05-23 11:47:07 UTC
Created attachment 194304 [details]
The example file in Word 2016 and Writer master
Comment 2 Dieter 2024-06-09 15:21:54 UTC
I confirm it with

Version: 24.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: d2eab48f697a1e6097778158f623f11306ac7a3d
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded
Comment 3 Commit Notification 2024-10-03 22:05:50 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3800ab58355385dcb482d3089accc7ce141f5ee9

tdf#161233 paint pictures completely also with contour wrap

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Mike Kaganski 2024-10-04 04:55:26 UTC
This is bug 95969, but it's too late to mark it as such.
Comment 5 Mike Kaganski 2024-10-04 06:14:30 UTC
*** Bug 95969 has been marked as a duplicate of this bug. ***
Comment 6 Buovjaga 2024-11-03 19:13:41 UTC
Is there further work needed or should this be closed as fixed?
Comment 7 Gabor Kelemen (Collabora) 2025-01-06 08:27:35 UTC
Verified to work in 

Version: 25.2.0.1.0+ (X86_64) / LibreOffice Community
Build ID: 468d47bdf44a772e989a0adbeb5bb097e3cb4f31
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded
Comment 8 Commit Notification 2025-03-08 14:00:22 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bf557f6c181578e1e89f63e502aae3eed1880af1

tdf#165064 fix regression from tdf#161233

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-03-11 13:05:14 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/ee83fe311481765d43724fbaab5a47b8ce66ec3f

tdf#165064 fix regression from tdf#161233

It will be available in 25.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Dieter 2026-02-08 16:27:23 UTC
VERIFIED with

Version: 26.2.0.3 (X86_64)
Build ID: 620(Build:3)
CPU threads: 12; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL threaded

Oliver, thank you for fixing it!