tdf#161233 paint pictures completely also with contour wrap

Pictures/shapes with contour wrap are clipped in Writer.
Word paints the pictures completely while the text flows above
around the contour. This is implemented here for imported documents.

Change-Id: I2a5fd89c18cbb3e88b65bc63e8105cc07b95af82
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173869
Tested-by: Jenkins
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175552
Tested-by: Thorsten Behrens <thorsten.behrens@allotropia.de>