sw/inc/IDocumentSettingAccess.hxx
@@ -139,6 +139,8 @@ enum class DocumentSettingId
     PAINT_HELL_OVER_HEADER_FOOTER,
     // tdf#155229 calculate minimum row height including horizontal border width
     MIN_ROW_HEIGHT_INCL_BORDER,
+    // tdf#161233 pictures with wrap polygon should not be clipped
+    NO_CLIPPING_WITH_WRAP_POLYGON,
 };
 
 /** Provides access to settings of a document
